# StaRVOOrS-tool

./: Absppdate.hs  CommonFunctions.hs  DL2JML.hs  ErrM.hs  Instrumentation.hs  JMLGenerator.hs  JMLInjection.hs  JavaLanguage.hs  JavaParser.hs  LICENSE  Lexppdate.hs  MonitorGeneration.hs  OperationalizationPP.hs  Parppdate.hs  ParserJML.hs  ParserXMLKeYOut.hs  PartialInfoFilesGeneration.hs  Printppdate.hs  README.md  RefinementPPDATE.hs  ReplicatedAutomataGenerator.hs  ReportGen.hs  Skelppdate.hs  StaRVOOrS-tool.cabal  StaRVOOrS.hs  StaticAnalysis.hs  Translator2DATE.hs  TypeInferenceXml.hs  Types.hs  UpgradePPDATE.hs
JML/: AbsJml.hs  JMLGenerator.hs  JMLInjection.hs  ParJml.hs  PrintJml.hs  SkelJml.hs
Java/: JavaFilesAnalysis.hs  JavaLanguage.hs  JavaParser.hs
Optimisations/: OptAvoidTrivialCond.hi  OptAvoidTrivialCond.hs  OptRecAway.hi  OptRecAway.hs  Optimisations.hi  Optimisations.hs
ParserActions/: AbsActions.hi  AbsActions.hs  Absactions.hs  LexActions.hi  LexActions.hs  Lexactions.hs  ParActions.hi  ParActions.hs  Paractions.hs  ParserAct.hi  ParserAct.hs  ParserAct.hs~  PrintActions.hi  PrintActions.hs  Printactions.hs  SkelActions.hi  SkelActions.hs  Skelactions.hs
ParserJML/: AbsJml.hi  Absjml.hs  Abssample.hs  LexJml.hi  LexJml.hs  Lexjml.hs  ParJml.hi  ParJml.hs  Parjml.hs  ParserJML.hi  ParserJML.hs  PrintJml.hi  PrintJml.hs  Printjml.hs  SkelJml.hi  Skeljml.hs
ParserJava/: JavaLanguage.hs  JavaParser.hs  prop.ppd~
ParserPPDATE/: AbsPpdate.hs  Absppdate.hs  LexPpdate.hs  Lexppdate.hs  ParPpdate.hs  Parppdate.hs  Parser.hs  PrintPpdate.hs  Printppdate.hs  SkelPpdate.hs  Skelppdate.hs
Translators/: DL2JML.hs  DummyTranslation2DATE.hs  PPDATE2Script.hs  Translator2DATE.hs  TranslatorActions.hs
src/: CommonFunctions.hs  Instrumentation.hs  MonitorGeneration.hs  OperationalizationPP.hs  PartialInfoFilesGeneration.hs  RefinementPPDATE.hs  Types.hs  (+4 more)
(+30 files in other folders)
