
-- The name of the package.
name:                StaRVOOrS-tool

version:             1.6.1.3 

-- A longer description of the package.
-- description:         

-- URL for the project homepage or repository.
homepage:            http://cse-212294.cse.chalmers.se/starvoors/

-- The license under which the package is released.
license:             GPL-2

-- The file containing the license text.
license-file:        LICENSE

-- The package author(s).
author:              Mauricio Chimento

-- An email address to which users can send suggestions, bug reports, and 
-- patches.
maintainer:          jmau.chimento@gmail.com

-- A copyright notice.
-- copyright:           

category:            Application

build-type:          Simple

-- Extra files to be distributed with the package, such as examples or a 
-- README.
extra-source-files:  README.md LICENSE

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >=1.10


executable StaRVOOrS-tool
  -- .hs or .lhs file containing the Main module.
  main-is:             StaRVOOrS.hs
  
  -- Modules included in this executable, other than Main.
  --other-modules:      
  
  -- LANGUAGE extensions used by modules in this package.
  other-extensions:    TemplateHaskell, CPP, MagicHash
  
  -- Other library packages from which modules are imported.
  build-depends:       base >=4.8 && <4.11, HaXml >=1.25 && <1.26, lens >=4.15 && <4.17, containers >=0.5 && <0.6, directory >=1.2 && <1.4, process >=1.2 && <1.7, split >=0.2 && <0.3, filepath >=1.4 && <1.5, mtl >=2.2 && <2.3, language-java >=0.2 && <0.3, array >=0.5 && <0.6
  
  -- Directories containing source files.
  hs-source-dirs:      src
  
  -- Base language which the package is written in.
  default-language:    Haskell2010
  
